--- a/experiment_on_univariate.ipynb
+++ b/experiment_on_univariate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "acc77788-6814-42de-aaff-686ab4e7b7b0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
+   "id": "fb3c678c-b5ad-4c18-969e-799de0c362a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k_best</th>\n",
+       "      <th>LoadPattern</th>\n",
+       "      <th>ExpType</th>\n",
+       "      <th>RegressionMethod</th>\n",
+       "      <th>ReadsAvgNmae</th>\n",
+       "      <th>ReadsAvgTrainingTime</th>\n",
+       "      <th>DispFramesNmae</th>\n",
+       "      <th>DispFramesTrainingTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>RegTree</td>\n",
+       "      <td>0.056144</td>\n",
+       "      <td>0.014493</td>\n",
+       "      <td>0.104439</td>\n",
+       "      <td>0.006670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.054182</td>\n",
+       "      <td>0.433537</td>\n",
+       "      <td>0.104363</td>\n",
+       "      <td>0.381942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>RegTree</td>\n",
+       "      <td>0.063916</td>\n",
+       "      <td>0.029828</td>\n",
+       "      <td>0.105761</td>\n",
+       "      <td>0.011478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.055563</td>\n",
+       "      <td>0.543634</td>\n",
+       "      <td>0.104650</td>\n",
+       "      <td>0.443548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>RegTree</td>\n",
+       "      <td>0.064938</td>\n",
+       "      <td>0.040463</td>\n",
+       "      <td>0.110131</td>\n",
+       "      <td>0.021749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>14</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.023694</td>\n",
+       "      <td>2.766602</td>\n",
+       "      <td>0.088922</td>\n",
+       "      <td>2.434117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>15</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>RegTree</td>\n",
+       "      <td>0.033067</td>\n",
+       "      <td>0.232730</td>\n",
+       "      <td>0.092551</td>\n",
+       "      <td>0.243180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>15</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.023704</td>\n",
+       "      <td>3.042155</td>\n",
+       "      <td>0.088781</td>\n",
+       "      <td>2.189637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>16</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>RegTree</td>\n",
+       "      <td>0.033183</td>\n",
+       "      <td>0.272609</td>\n",
+       "      <td>0.092264</td>\n",
+       "      <td>0.216798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>16</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.023530</td>\n",
+       "      <td>2.756110</td>\n",
+       "      <td>0.088951</td>\n",
+       "      <td>2.191024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>128 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     k_best LoadPattern         ExpType RegressionMethod  ReadsAvgNmae   \n",
+       "0         1    BothApps  FlashcrowdLoad          RegTree      0.056144  \\\n",
+       "1         1    BothApps  FlashcrowdLoad     RandomForest      0.054182   \n",
+       "2         2    BothApps  FlashcrowdLoad          RegTree      0.063916   \n",
+       "3         2    BothApps  FlashcrowdLoad     RandomForest      0.055563   \n",
+       "4         3    BothApps  FlashcrowdLoad          RegTree      0.064938   \n",
+       "..      ...         ...             ...              ...           ...   \n",
+       "123      14   SingleApp    PeriodicLoad     RandomForest      0.023694   \n",
+       "124      15   SingleApp    PeriodicLoad          RegTree      0.033067   \n",
+       "125      15   SingleApp    PeriodicLoad     RandomForest      0.023704   \n",
+       "126      16   SingleApp    PeriodicLoad          RegTree      0.033183   \n",
+       "127      16   SingleApp    PeriodicLoad     RandomForest      0.023530   \n",
+       "\n",
+       "     ReadsAvgTrainingTime  DispFramesNmae  DispFramesTrainingTime  \n",
+       "0                0.014493        0.104439                0.006670  \n",
+       "1                0.433537        0.104363                0.381942  \n",
+       "2                0.029828        0.105761                0.011478  \n",
+       "3                0.543634        0.104650                0.443548  \n",
+       "4                0.040463        0.110131                0.021749  \n",
+       "..                    ...             ...                     ...  \n",
+       "123              2.766602        0.088922                2.434117  \n",
+       "124              0.232730        0.092551                0.243180  \n",
+       "125              3.042155        0.088781                2.189637  \n",
+       "126              0.272609        0.092264                0.216798  \n",
+       "127              2.756110        0.088951                2.191024  \n",
+       "\n",
+       "[128 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "univariate_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "3e6a4ad1-b9d8-4aa7-be2d-db4cbb5481ce",
    "metadata": {},
    "outputs": [
@@ -29,7 +232,8 @@
     }
    ],
    "source": [
-    "k_best_means = univariate_results.groupby('k_best').mean(1)\n",
+    "k_best_by_k = univariate_results.groupby('k_best')\n",
+    "k_best_means = k_best_by_k.mean(1)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -38,6 +242,34 @@
     "axis[0].plot(k_best_means['ReadsAvgNmae']) # então a partir de 8 não faz muita diferença...\n",
     "axis[1].plot(k_best_means['DispFramesNmae']) # então a partir de 8 não faz muita diferença...\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "513f5ea9-5c4d-4e1e-a8ac-7dd5a8c59090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_original_table_result(load_pattern, exptype, regression_method, video_frame_rate_nmae, video_frame_rate_training_time, read_resp_nmae, read_resp_training_time):\n",
+    "    return {'LoadPattern': load_pattern,\n",
+    "            'ExpType': exptype,\n",
+    "            'RegressionMethod': regression_method,\n",
+    "            'ReadsAvgNmae': read_resp_nmae,\n",
+    "            'ReadsAvgTrainingTime', read_resp_training_time,\n",
+    "            'DispFramesNmae': video_frame_rate_nmae,\n",
+    "            'DispFramesTrainingTime': video_frame_rate_training_time}\n",
+    "    \n",
+    "original_minimal_results = pd.DataFrame([\n",
+    "    make_original_table_result('SingleApp', 'PeriodicLoad' , 'RegTree', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('SingleApp', 'PeriodicLoad' ,'RandomForest', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('BothApps', 'PeriodicLoad' ,'RegTree', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('BothApps', 'PeriodicLoad' ,'RandomForest', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('SingleApp', 'FlashCrowdLoad' ,'RegTree', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('SingleApp', 'FlashCrowdLoad' ,'RandomForest', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('BothApps', 'FlashCrowdLoad' ,'RegTree', 0.14, 1, .02, 1),\n",
+    "    make_original_table_result('BothApps', 'FlashCrowdLoad' , 'RandomForest', 0.14, 1, .02, 1),\n",
+    "])"
    ]
   }
  ],
