replication fixed yet another variable

--- a/experiment_on_univariate.ipynb
+++ b/experiment_on_univariate.ipynb
@@ -357,10 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "513f5ea9-5c4d-4e1e-a8ac-7dd5a8c59090",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "204.84625434875488\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -499,13 +506,14 @@
        "max                         0.033442  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "univariate_results.drop(columns=['k_best', 'DispFramesTrainingTime', 'ReadsAvgTrainingTime', 'ReadsAvgTrainingTimeOriginal', 'DispFramesTrainingTimeOriginal']).describe()"
+    "print(univariate_results['DispFramesTrainingTime'].sum() + univariate_results['ReadsAvgTrainingTime'].sum())\n",
+    "univariate_results.drop(columns=['k_best', 'DispFramesTrainingTime', 'ReadsAvgTrainingTime', 'ReadsAvgTrainingTimeOriginal', 'DispFramesTrainingTimeOriginal']).describe()\n"
    ]
   }
  ],
