--- a/AnaliseNaivePeriodic.ipynb
+++ b/AnaliseNaivePeriodic.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "962bcf1c-704e-43e4-b3fa-1a071ecf0ab3",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "937250e6-faa5-43a0-816b-c04fdc1de403",
    "metadata": {},
    "outputs": [
@@ -832,26 +832,22 @@
       "  y = column_or_1d(y, warn=True)\n",
       "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
-      "/tmp/ipykernel_133105/3208031153.py:21: RuntimeWarning: divide by zero encountered in log10\n",
-      "  feature_scores = -np.log10(selector.pvalues_)\n",
-      "/tmp/ipykernel_133105/3208031153.py:22: RuntimeWarning: invalid value encountered in divide\n",
-      "  feature_scores /= feature_scores.max()\n",
       "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
-      "/tmp/ipykernel_133105/3208031153.py:21: RuntimeWarning: divide by zero encountered in log10\n",
-      "  feature_scores = -np.log10(selector.pvalues_)\n",
-      "/tmp/ipykernel_133105/3208031153.py:22: RuntimeWarning: invalid value encountered in divide\n",
-      "  feature_scores /= feature_scores.max()\n",
       "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
-      "/tmp/ipykernel_133105/3208031153.py:21: RuntimeWarning: divide by zero encountered in log10\n",
-      "  feature_scores = -np.log10(selector.pvalues_)\n",
-      "/tmp/ipykernel_133105/3208031153.py:22: RuntimeWarning: invalid value encountered in divide\n",
-      "  feature_scores /= feature_scores.max()\n",
+      "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
+      "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
       "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
@@ -867,15 +863,15 @@
      "output_type": "stream",
      "text": [
       "Período,Característica,Score\n",
-      "1,0_cpu8_.nice,-0.0\n",
-      "2,0_cpu8_.nice,-0.0\n",
-      "4,0_cpu9_.guest,-0.0\n",
-      "8,3_cpu21_.idle,0.544394201420278\n",
-      "16,3_cpu14_.usr,0.5452212673075854\n",
-      "32,3_cpu11_.usr,0.5637800268016513\n",
-      "64,3_cpu18_.usr,0.4715352921213083\n",
-      "128,3_all_..usr,0.5078011027507648\n",
-      "256,3_cpu16_.idle,0.5096232787480304\n",
+      "1,5_eth1_rxkB.s,0.0\n",
+      "2,2_kbmemfree,0.0\n",
+      "4,3_cpu21_.idle,2.1913073600031042e-264\n",
+      "8,3_cpu21_.idle,8.3743476193134e-137\n",
+      "16,3_cpu14_.usr,1.936522582600299e-72\n",
+      "32,3_cpu11_.usr,8.902418485397795e-38\n",
+      "64,3_cpu18_.usr,2.1357787934705582e-19\n",
+      "128,3_all_..usr,6.5199093577411994e-09\n",
+      "256,3_cpu16_.idle,8.25532551383376e-06\n",
       "\n"
      ]
     },
@@ -883,14 +879,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
-      "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  X_norms = np.sqrt(row_norms(X.T, squared=True) - n_samples * X_means**2)\n",
       "/usr/lib/python3.11/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/usr/lib/python3.11/site-packages/sklearn/feature_selection/_univariate_selection.py:379: RuntimeWarning: invalid value encountered in sqrt\n",
@@ -913,7 +901,7 @@
     "\n",
     "import seaborn as sns\n",
     "\n",
-    "\n",
+    "worst_features = {}\n",
     "result = 'Período,Característica,Score\\n'\n",
     "for period in [1,2,4,8,16,32,64,128,256]:\n",
     "    x_filtered = x[x.index % period == 0]\n",
@@ -923,13 +911,11 @@
     "    \n",
     "    selector.fit(x_filtered, y_filtered)\n",
     "    \n",
-    "    feature_scores = -np.log10(selector.pvalues_)\n",
-    "    feature_scores /= feature_scores.max()\n",
+    "    feature_scores = selector.pvalues_\n",
     "    feature_names = x_filtered.columns\n",
-    "    \n",
     "    feature_scores_df = pd.DataFrame({'Feature': feature_names, 'Score': feature_scores})\n",
     "    \n",
-    "    feature_scores_df.sort_values(by='Score', ascending=False, inplace=True)\n",
+    "    feature_scores_df.sort_values(by='Score', ascending=True, inplace=True)\n",
     "    \n",
     "    best_feature_names = feature_scores_df['Feature'].head(100).tolist()\n",
     "    \n",
