--- a/monitorar-reproduzir/reproduzir-archive/sar_split.ipynb
+++ b/monitorar-reproduzir/reproduzir-archive/sar_split.ipynb
@@ -9,29 +9,357 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "cpu = pd.read_csv('sar_stats-3_cpu.csv')\n",
-    "pages = pd.read_csv('sar_stats-3_pages.csv')\n",
-    "network = pd.read_csv('sar_stats-3_DEV.csv')\n",
+    "cpu = pd.read_csv('sar_stats-3_cpu.csv', sep=';')\n",
+    "pages = pd.read_csv('sar_stats-3_pages.csv', sep=';')\n",
+    "network = pd.read_csv('sar_stats-3_DEV.csv', sep=';')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_idle = cpu[[\"timestamp\", \"%idle\"]]\n",
+    "pgfree = pages[['timestamp', 'pgfree/s']]\n",
+    "eth1_rx = network[['timestamp','rxkB/s']]\n",
     "\n",
-    "cpu_idle = cpu[[\"%idle\"]]\n",
-    "pgfree = pages[['pgfree/s']]\n",
-    "eth1_rx = network[['rxkB/s']]\n",
+    "merged_df = pd.merge(cpu_idle, pgfree, on='timestamp', how='inner')\n",
+    "merged_df = pd.merge(merged_df, eth1_rx, on='timestamp', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>%idle</th>\n",
+       "      <th>pgfree/s</th>\n",
+       "      <th>rxkB/s</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>1273.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-10-11 10:30:31 UTC</td>\n",
+       "      <td>97.52</td>\n",
+       "      <td>3519.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-10-11 10:30:31 UTC</td>\n",
+       "      <td>97.52</td>\n",
+       "      <td>3519.0</td>\n",
+       "      <td>332.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>2024-10-11 10:31:58 UTC</td>\n",
+       "      <td>99.42</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>9.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>2024-10-11 10:31:58 UTC</td>\n",
+       "      <td>99.42</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>11.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>270 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   timestamp  %idle  pgfree/s   rxkB/s\n",
+       "0    2024-10-11 10:30:30 UTC  97.24    6544.0     0.00\n",
+       "1    2024-10-11 10:30:30 UTC  97.24    6544.0  1273.73\n",
+       "2    2024-10-11 10:30:30 UTC  97.24    6544.0     0.00\n",
+       "3    2024-10-11 10:30:31 UTC  97.52    3519.0     0.00\n",
+       "4    2024-10-11 10:30:31 UTC  97.52    3519.0   332.48\n",
+       "..                       ...    ...       ...      ...\n",
+       "265  2024-10-11 10:31:58 UTC  99.42     539.0     9.46\n",
+       "266  2024-10-11 10:31:58 UTC  99.42     539.0     0.00\n",
+       "267  2024-10-11 10:31:59 UTC  99.25     103.0     0.00\n",
+       "268  2024-10-11 10:31:59 UTC  99.25     103.0    11.39\n",
+       "269  2024-10-11 10:31:59 UTC  99.25     103.0     0.00\n",
+       "\n",
+       "[270 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_idle = cpu[[\"timestamp\", \"%idle\"]]\n",
+    "pgfree = pages[['timestamp', 'pgfree/s']]\n",
+    "eth1_rx = network[['timestamp','rxkB/s']]\n",
     "\n",
-    "merged_df = pd.concat([cpu_idle, pgfree, eth1_rx], axis=1)\n",
-    "\n",
-    "print(merged_df)"
+    "outer_df = pd.merge(cpu_idle, pgfree, on='timestamp', how='outer')\n",
+    "outer_df = pd.merge(merged_df, eth1_rx, on='timestamp', how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>%idle</th>\n",
+       "      <th>pgfree/s</th>\n",
+       "      <th>rxkB/s_x</th>\n",
+       "      <th>rxkB/s_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1273.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>1273.73</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-10-11 10:30:30 UTC</td>\n",
+       "      <td>97.24</td>\n",
+       "      <td>6544.0</td>\n",
+       "      <td>1273.73</td>\n",
+       "      <td>1273.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>805</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>11.39</td>\n",
+       "      <td>11.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>11.39</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>807</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>808</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>11.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>809</th>\n",
+       "      <td>2024-10-11 10:31:59 UTC</td>\n",
+       "      <td>99.25</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>810 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   timestamp  %idle  pgfree/s  rxkB/s_x  rxkB/s_y\n",
+       "0    2024-10-11 10:30:30 UTC  97.24    6544.0      0.00      0.00\n",
+       "1    2024-10-11 10:30:30 UTC  97.24    6544.0      0.00   1273.73\n",
+       "2    2024-10-11 10:30:30 UTC  97.24    6544.0      0.00      0.00\n",
+       "3    2024-10-11 10:30:30 UTC  97.24    6544.0   1273.73      0.00\n",
+       "4    2024-10-11 10:30:30 UTC  97.24    6544.0   1273.73   1273.73\n",
+       "..                       ...    ...       ...       ...       ...\n",
+       "805  2024-10-11 10:31:59 UTC  99.25     103.0     11.39     11.39\n",
+       "806  2024-10-11 10:31:59 UTC  99.25     103.0     11.39      0.00\n",
+       "807  2024-10-11 10:31:59 UTC  99.25     103.0      0.00      0.00\n",
+       "808  2024-10-11 10:31:59 UTC  99.25     103.0      0.00     11.39\n",
+       "809  2024-10-11 10:31:59 UTC  99.25     103.0      0.00      0.00\n",
+       "\n",
+       "[810 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outer_df"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
