--- a/2024_replication-histogram.ipynb
+++ b/2024_replication-histogram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "700c67a6-b462-4244-8356-9e0b34cdf186",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "280ed589-8140-406b-b5d6-7a9a4de9b8e4",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import seaborn as sns\n",
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "549dce6c-bcf7-4597-aef5-2f1d327ad091",
    "metadata": {},
    "outputs": [],
@@ -65,6 +64,57 @@
     "y_metric = 'DispFrames'\n",
     "\n",
     "x, y_video = parse_traces(trace, y_metric, ['X_cluster.csv', 'X_flow.csv', 'X_port.csv'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6166941f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "(y_video).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d0bd30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dataset_management import parse_traces\n",
+    "\n",
+    "\n",
+    "trace = 'VoD-SingleApp-FlashcrowdLoad'\n",
+    "y_metric = 'DispFrames'\n",
+    "\n",
+    "x, y_video = parse_traces(trace, y_metric, ['X_cluster.csv', 'X_flow.csv', 'X_port.csv'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8371a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DispFrames    0.176562\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(y_video < 24).sum()/len(y_video)"
    ]
   },
   {
@@ -172,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
